This paper will look so half-assed, jeez

--- a/report/report.tex
+++ b/report/report.tex
@@ -858,6 +858,7 @@ immediately into an \textit{if} expression.
 	O.idl &= 0 \\
 	O.type &= PureRec \\
 	O.consts &= $O_i.consts$ \dots \\
+	O.rec &= (I.idl, ($O_i$.ido \dots)) \\
 	O.code &= $O_i.code$\dots \: OpBranch I.rec \\
 \end{tabularx}
 
