--- a/report/report.tex
+++ b/report/report.tex
@@ -30,11 +30,39 @@ We present the translation from a simple high-level language with
 functional elements and LISP-like syntax to SPIR-V, an abstract
 assembly language for GPU shaders and kernels.
 
+The idea of using functional concepts in a shader came from the fact
+that shaders usually have a small and well-defined set of inputs
+and outputs and can therefore be written as mostly pure computations.
+Originally, another personal motivation for developing a shader language
+translatable to SPIR-V was that existing shader languages have some properties
+that are undesirable in certain contexts. For instance, to optimize
+shaders for performance (which obviously makes sense) many operations
+(or: programming errors) like accessing an array or input out-of-bounds, but
+even normalizing a zero-length vector or computations involving infinity
+are undefined in certain contexts and environments. In practice, this
+undefinedness is unobservable in some implementations while it leads to
+major errors on other implementations, making development and debugging
+extremely hard. The idea was to develop a language that guarantees to
+make undefined behavior observable (e.g. by always checking for undefined
+behavior conditions at runtime and write output to a buffer should
+they be fulfilled). This obviously comes at a potentially huge and
+unacceptable runtime cost and brings no advantage for shipped application
+but could be quite useful in a development environment, making sure
+that shader programs don't trigger undefined behavior.
+During the development of this language I realized though that this
+is better realized as a completely separate SPIR-V-only pass since it
+doesn't depend at all on anything in the source language. Regarding
+the correctness proof of the compiler it is furthermore not too interesting,
+since it would just introduce additional branches for builtin operations.
+The following sections hint at it a couple of times but in the end I only describe
+the translation from our source language to SPIR-V, adopting their
+(or the runtime's) notions of undefined behavior.
+
 \section{Source language: $\lambda$V}
 
 Our source language is a simple shader language with functional elements.
 To keep proofs and formalization minimal, we will only look at a simple
-version of $\lambda$V (basically a subset of what I implemented~\footnote{See 
+version of $\lambda$V (basically already a subset of what I implemented~\footnote{See 
 \url{https://github.com/nyorain/lambdaV} for my experiments with implementing
 a real compiler, a lot of the formal proof here is actually quite close
 to the compiler source code}): \\
@@ -65,7 +93,7 @@ the advantage that writing a parser and AST representation is extremely trivial.
 
 \section{The target language: SPIR-V}
 
-SPIR-V~\footnote{https://www.khronos.org/registry/spir-v/specs/unified1/SPIRV.html}
+SPIR-V~\footnote{\url{https://www.khronos.org/registry/spir-v/specs/unified1/SPIRV.html}}
 is an SSA-form abstract typed assembly language. It has
 similarities to LLVM IR but is more limited: no dynamic dispatch,
 i.e. no function pointers, no memory allocations, no stack frame and
@@ -531,21 +559,25 @@ fragment shader.
 
 \section{Translation}
 
-We model translation as a recursive function \textit{translate}:
+We model translation as a recursive function \textit{translate}.
+We use the usual structure (unordered tuples where each value
+instead gets a name) and member-access notation to keep things
+somewhat compact.
 
 \begin{center}
 \fbox{\begin{minipage}{15em}
 	\begin{align*}
 		% R_i &::= \{hb: ID, cb: ID\} \\
 		BackEdge &::= (ID, ID*) \\
+		GE &::= (ID, \tau) \\
+		R_i &::= {defs: identifier \rightarrow GE, cont: ID} \\
 		R_o &::= BackEdge* \\
-		CE &::= e \:|\: genexpr(ID, \tau) \\
 		ID &::= \text{SPIR-V numeral ID} \\
-		D &::= identifier \rightarrow (CE, D) \\
-		A &::= (D, ce*)* \\
+		A &::= (ce*)* \\
+		G &::= identifier \rightarrow GE \\
 		C &::= [ID \mapsto Num]* \\
 		\\
-		Input &::= \{expr: CE, defs: D, args: A, idc: ID, idl: ID, rec: ID\} \\
+		Input &::= \{expr: e, args: A, gen: G, idc: ID, idl: ID, rec: R_i\} \\
 		Output &::= \{code: \vi, consts: C, ido: ID, idc: ID, idl: ID, type: \tau, rec: R_o\} \\
 		\\
 		translate&: Input \rightarrow Output
@@ -558,13 +590,10 @@ We model translation as a recursive function \textit{translate}:
 \textbf{Input.expr} is simply the expression to be translated. We extend expressions
 by an intermediate type generated during translation, an already translation
 expression holding its ID and its type. \\
-% $ce ::= e \:|\: genexpr(ID, ID, \tau)$
-\textbf{Input.defs} is a mapping from identifiers to expressions and their environment.
-This is basically how we realize context-sensitive substitution in our
-translation. \\
 \textbf{Input.rec} and \textbf{Output.rec} are information needed to generate recursive
 functions. Inside a \textit{rec-func} construct, \textbf{Input.rec} is the block 
-ID of the continue block, to which recursive calls should jump. \\
+ID of the continue block (to jump to) and the IDs as well as types (bundled into
+our new GE type) for the recursive function arguments. \\
 %, as well as the type IDs of its parameters.
 \textbf{Output.rec} is a set of blocks and their respective parameter IDs for
 recursvie calls (i.e. edges to the continue block). \\
@@ -605,25 +634,7 @@ expression, you can basically imagine each section being one (giant)
 derivation rule for the defining judgment $translate(I) = O$
 with all the conditions as premises. 
 
-We first need a utility function $ioa$, modeling
-the \textit{insert or assign} semantic of a mapping (in our compiler
-we simply use a hash map):
-
-\[
-	ioa(D, id \mapsto v)(id_c) :=
-	\begin{cases}
-		v & \text{for } id = id_c \\
-		D(id_c) & \text{otherwise}
-	\end{cases}
-\]
-
-We write $ioa(D, (id \mapsto v)^*))$ as a shortcut for subsequent
-insertion/replacement, \\
-\[
-	ioa(ioa( \dots ioa(D, id_1 \mapsto v_1) \dots ), id_n \mapsto v_n)
-\]
-
-Furthermore, when generating the SPIR-V module from a full $\lambda$V program,
+When generating the SPIR-V module from a full $\lambda$V program,
 we define all types in the header (giving them IDs) and can therefore define a
 function $typeid: \tau \rightarrow ID$ that returns the SPIR-V type ID
 associated with a given type in our formalization. 
@@ -635,14 +646,31 @@ once and are able to use them during translation. Their translation
 rules are not shown below since they are therefore trivial (basically
 a no-op, just returning the ID of the respective constant).
 
+We also need a utility function $ioa$, modeling
+the \textit{insert or assign} semantic of a mapping (in our compiler
+we simply use a hash map):
+
+\[
+	ioa(Mapping, id \mapsto v)(id_c) :=
+	\begin{cases}
+		v & \text{for } id = id_c \\
+		Mapping(id_c) & \text{otherwise}
+	\end{cases}
+\]
+
+We write $ioa(Mapping, (id \mapsto v)^*)$ as a shortcut for subsequent
+insertion/replacement, \\
+\[
+	ioa(ioa( \dots ioa(Mapping, id_1 \mapsto v_1) \dots ), id_n \mapsto v_n)
+\]
+
 \subsection{Translation: func}
 
 This is probably the most interesting (and yet one the most simple) translation
 rules: to translate a function call we simply translate its body
 (effectively always inlining the function) and replace all occurrences of 
-function parameter with translations of the expressions bound to them (see
-the translation of identifiers in the next subsection). Of course, this
-might lead to code bloat, when huge functions or complex expression passes
+function parameter with translations of the expressions bound to them.
+Of course, this might lead to code bloat, when huge functions or complex expression passes
 as paremters are inlined. This compiler doesn't care too much and
 separate optimization passes can still perform common subexpression
 elimination or similar (they could technically even refactor code that
@@ -657,17 +685,8 @@ the restrictions outlined in the beginning).
 \medskip
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= (func ($id_1 \dots id_n$) e) \\
-	I.args &= ($A_r$, (ndefs, $e_1 \dots e_n$)) \\
-	ndefs &:= ioa(I.defs, ($id_i \mapsto (e_i$, I.defs))\dots) \\
-	O &= translate(\{expr: e, defs: ndefs, args: $A_r$, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
-\end{tabularx}
-
-\subsection{Translation: identifier}
-
-\begin{tabularx}{\linewidth}{rl}
-	I.expr &= identifier \\
-	I.defs(identifier) &= (e, I.defs) \\
-	O &= translate(\{expr: e, defs: ndefs, args: I.args, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
+	I.args &= ($A_r$, ($e_1 \dots e_n$)) \\
+	O &= translate(\{expr: $e[e_1 / id_1]\dots[e_n / id_n]$, args: $A_r$, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
 \end{tabularx}
 
 \subsection{Translation: numbers}
@@ -691,20 +710,19 @@ constant definition (in O.consts) and return the id of the constant.
 
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= (let (($id_1 e_1) \dots (id_n e_n)$) e) \\
-	ndefs &:= ioa(I.defs, ($id_i \mapsto e_i$, I.defs))\dots) \\
-	O &= translate(\{expr: e, defs: ndefs, args: I.args, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
+	O &= translate(\{expr: $e[e_1 / id_1]\dots[e_n / id_n]$, args: I.args, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
 \end{tabularx}
 
 \subsection{Translation: list}
 
 This translation rule is only useful (and well-defined) when $e_0$ isn't
-an atomic expression such as $(func \dots)$ or a builtin. \\
+an atomic expression such as $func$ or a builtin. \\
 
 \medskip
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= ($e_0$ $e_1$ \dots $e_n$) \\
-	nargs &:= (I.args, (I.defs, $e_1$\dots$e_n$)) \\
-	O &= translate(\{expr: $e_0$, defs: I.defs, args: nargs, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
+	nargs &:= (I.args, ($e_1$\dots$e_n$)) \\
+	O &= translate(\{expr: $e_0$, args: nargs, idc: I.idc, idl: I.idl, rec: I.rec\}) \\
 \end{tabularx}
 
 \subsection{Translation: if}
@@ -716,13 +734,23 @@ given branches is just a recursive call (i.e. of type $PureRec$).
 \medskip
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= (if $e_c$ $e_t$ $e_f$) \\
-	$O_c$ &= translate(\{expr: $e_c$, defs: defs, args: I.args, idc: I.idc + 4, idl: I.idl, rec: $\varnothing$\}) \\
-	$O_t$ &= translate(\{expr: $e_t$, defs: defs, args: I.args, idc: $O_c$.idc, idl: I.idc + 0, rec: I.rec\}) \\
-	$O_f$ &= translate(\{expr: $e_f$, defs: defs, args: I.args, idc: $O_f$.idc, idl: I.idc + 1, rec: I.rec\}) \\
+	$O_c$ &= translate(\{expr: $e_c$, args: I.args, idc: I.idc + 4, idl: I.idl, rec: I.rec\}) \\
+	$O_t$ &= translate(\{expr: $e_t$, args: I.args, idc: $O_c$.idc, idl: I.idc + 0, rec: I.rec\}) \\
+	$O_f$ &= translate(\{expr: $e_f$, args: I.args, idc: $O_f$.idc, idl: I.idc + 1, rec: I.rec\}) \\
 
 	O.consts &= consts: $O_c$.consts $O_t$.consts $O_f$.consts \\
-	O.ido &= I.idc + 4 \\
-	O.idl &= I.idc + 2 \\
+	O.ido &= 
+	$\begin{cases}
+		0 & \text{for } O_f.type = PureRec \land O_t.type = PureRec \\
+		I.idc + 4 & \text{otherwise} \\
+	\end{cases}$ \\
+
+	O.idl &= 
+	$\begin{cases}
+		0 & \text{for } O_f.type = PureRec \land O_t.type = PureRec \\
+		I.idc + 2 & \text{otherwise} \\
+	\end{cases}$ \\
+
 	O.type &= 
 	$\begin{cases} 
 		O_t.type & \text{for } O_f.type = PureRec \\
@@ -741,16 +769,16 @@ $O.code$ is defined as: \\
 	\cline{1-2}
 	(I.idc + 0) = &OpLabel \\
 	& $O_t$.code \\
-	& OpBranch (I.idc + 3) & \textbf{[if $O_t$.type $\neq$ PureRec]} \\
+	& OpBranch (I.idc + 2) & \textbf{[if $O_t$.type $\neq$ PureRec]} \\
 	\cline{1-2}
 	(I.idc + 1) = &OpLabel \\
 	& $O_f$.code \\
-	& OpBranch (I.idc + 3) & \textbf{[if $O_f$.type $\neq$ PureRec]} \\
+	& OpBranch (I.idc + 2) & \textbf{[if $O_f$.type $\neq$ PureRec]} \\
 	\cline{1-2}
 	(I.idc + 2) = &OpLabel & \textbf{[if $O$.type $\neq$ PureRec]} \\
 	(I.idc + 3) = &OpPhi typeid(O.type) & \textbf{[if $O$.type $\neq$ PureRec]} \\
-		& \quad $O_t$.ido (I.idc + 1) & \quad \textbf{[if $O_t$.type $\neq$ PureRec]} \\
-		& \quad $O_f$.ido (I.idc + 2) & \quad \textbf{[if $O_f$.type $\neq$ PureRec]} \\
+		& \quad $O_t$.ido ($O_t$.idl) & \quad \textbf{[if $O_t$.type $\neq$ PureRec]} \\
+		& \quad $O_f$.ido ($O_f$.idl) & \quad \textbf{[if $O_f$.type $\neq$ PureRec]} \\
 \end{tabularx}
 
 \subsection{Translation: Computations}
@@ -762,9 +790,9 @@ For instance, a translation of the ``vec4'' builtin, using
 \medskip
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= vec4 \\
-	I.args &= ((ndefs, $e_1$ $e_2$ $e_3$ $e_4$)) \\
+	I.args &= (($e_1$ $e_2$ $e_3$ $e_4$)) \\
 	$O_0$ &= \{idc: I.idc + 1\} \\
-	$O_i$ &= translate(\{expr: $e_i$, defs: ndefs, args: $\varnothing$, idc: $O_{i - 1}$.idc, idl: I.idl, rec: $\varnothing$\}) \dots \\
+	$O_i$ &= translate(\{expr: $e_i$, args: $\varnothing$, idc: $O_{i - 1}$.idc, idl: I.idl, rec: I.rec\}) \dots \\
 	O.idc &= $O_4$.idc \\
 	O.ido &= I.idc + 1 \\
 	O.type &= Vec(4, f) \\
@@ -788,16 +816,16 @@ from within the loop body.
 \medskip
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= (rec-func\: ($id_1 \dots id_n$) e) \\
-	I.args &= ((ndefs, $e_1 \dots e_n$)) \\
+	I.args &= (($e_1 \dots e_n$)) \\
 	\\
 	hb &:= I.idc + 0 \\
 	lb &:= I.idc + 1 \\
 	cb &:= I.idc + 2 \\
 	mb &:= I.idc + 3 \\
 	$O_0$ &:= \{idc: I.idc + 4\} \\
-	$O_i\dots$ &:= translate(\{expr: $e_i$, defs: ndefs, args: $\varnothing$, idc: $O_{i - 1}$.idc, idl: I.idl, rec: $\varnothing$\}) \dots \\
-	$D_b$ &:= ioa(I.defs, ($id_i$ $\mapsto$ (genexpr($O_n.idc$ + i, $O_i$.type)), I.defs)\dots) \\
-	$O_b$ &:= translate(\{expr: e, defs: $D_b$, idc: $O_n.idc + 2n$, idl: lb, rec: cb\}) \\
+	$O_i\dots$ &:= translate(\{expr: $e_i$, args: $\varnothing$, idc: $O_{i - 1}$.idc, idl: I.idl, rec: I.rec\}) \dots \\
+	$D_b$ &:= ioa(I.rec.defs, ($id_i$ $\mapsto$ ($O_n.idc$ + i, $O_i$.type))\dots) \\
+	$O_b$ &:= translate(\{expr: e, idc: $O_n.idc + 2n$, idl: lb, rec: {cont: cb, defs: $D_b$}\}) \\
 	\\
 	$O_b$.type &= Rec $\tau$ \\
 	$O_b$.rec &= $((block_1, bid_1^1 \dots bid_n^1) \dots (block_m, bid_1^m \dots bid_n^m))$ \\
@@ -849,9 +877,9 @@ immediately into an \textit{if} expression.
 \medskip
 \begin{tabularx}{\linewidth}{rl}
 	I.expr &= rec \\
-	I.args &= ((ndefs, $e_1$\dots$e_n$)) \\
+	I.args &= (($e_1$\dots$e_n$)) \\
 	$O_0$ &= \{idc: I.idc\} \\
-	$O_i$ &= translate(\{expr: $e_i$, defs: ndefs, args: $\varnothing$, idc: $O_{i - 1}$.idc, idl: I.idl, rec: $\varnothing$\}) \dots \\
+	$O_i$ &= translate(\{expr: $e_i$, args: $\varnothing$, idc: $O_{i - 1}$.idc, idl: I.idl, rec: $\varnothing$\}) \dots \\
 	\\
 	O.idc &= $O_n$.idc \\
 	O.ido &= 0 \\ 
@@ -859,28 +887,51 @@ immediately into an \textit{if} expression.
 	O.type &= PureRec \\
 	O.consts &= $O_i.consts$ \dots \\
 	O.rec &= (I.idl, ($O_i$.ido \dots)) \\
-	O.code &= $O_i.code$\dots \: OpBranch I.rec \\
+	O.code &= $O_i.code$\dots \: OpBranch I.rec.cont \\
 \end{tabularx}
 
-\subsection{Translation: genexpr}
+\subsection{Translation: identifier}
 
-We needed this additional expression alternative $genexpr(ID, \tau)$ to
-realize \textit{rec-func} parameters. Their translation is straightforward,
-we simply return the already generated ID.
+We replace all identifiers except the function parameters in \textit{rec-func}
+constructs, since those cannot be replaced by source-lanauge expressions
+but must simply use the results from the \textit{OpPhi} instructions
+in the beginning of the \textit{rec-func} loop body.
 
 \medskip
 \begin{tabularx}{\linewidth}{rl}
-	I.expr &= genexpr($id_e$, $\tau_e$) \\
+	I.expr &= \textit{identifier} \\
 	I.args &= $\varnothing$ \\
-	O &= \{code: $\varnothing$, consts: $\varnothing$, ido: id, idc: I.idc, idl: I.idl, type: $\tau_e$, rec: $\varnothing$\} \\
+	I.rec(\textit{identifier}) &= (\textit{ido}, \textit{tau}) \\
+	O &= \{code: $\varnothing$, consts: $\varnothing$, ido: ido, idc: I.idc, idl: I.idl, type: $\tau$, rec: $\varnothing$\} \\
 \end{tabularx}
 
-\subsection{Translation to program}
+\subsection{Module creation}
 
-TODO: describe how a translated expression is wrapped to generate a valid
-spirv module. Introduce \textit{startid}, \textit{startblock}.
+A valid SPIR-V module requires more than just the instruction vector.
+We have to add a header, define an entry point, the used extensions,
+all types and constants (generated/used by the translation) as well as the one
+output variable (representing the framebuffer output, i.e. where we will
+write the resulting value in the end) which must be annotated with
+an $OpDecorate$ instruction that connects it to the framebuffer output.
+Then we define the entry point function and the first block using
+$OpLabel$. After that we insert the code generated by the translation
+of the source expression. In the end we have to store the SPIR-V value
+in the global output using $OpStore$ on O.ido from our translation.
+Then we end our main function using $OpReturn$ and $OpFunctionEnd$.
+
+We statically use IDs for types and the entry block. We therefore
+define the first usable ID (i.e. the number of IDs we statically use in
+the header + 1) as \textit{startid} and the ID of the first basic
+block (\textit{OpLabel}) in our main function as \textit{startblock}.
+Both of these are required in the translation of our source
+expression.
 
 \section{Correctness}
+
+\textit{Note: the proof regarding the tail recursion (i.e. involving \textit{rec})
+is not completely formalized and has some problems. I had trouble finding a formalization
+in which this can obviously and easily be proven.}
+\medskip
 
 We want to prove whole program correctness. Valid programs are expressions
 that are well-typed with no recursive context and no arguments and
@@ -908,29 +959,36 @@ The correctness theorem looks like this:
 
 \begin{center}
 \fbox{\begin{minipage}{0.9\textwidth}
-	When we have a well-typed program $e$ with 
-	$\varnothing, \varnothing \vdash e : \tau_o$ and 
-	$eval_\lambda(e) = o$ in $\lambda$V and 
-	$translate(\{expr: e, defs: \varnothing, args: \varnothing, idc: \textit{startid}, idl: \textit{startblock}, rec: \varnothing\}) = O$,
+	\begin{flushleft}
+	When we have a well-typed program $e$ with  \\
+	$\varnothing, \varnothing \vdash e : \tau_o$ and  \\
+	$eval_\lambda(e) = o$ in $\lambda$V and  \\
+	$translate(\{expr: e, args: \varnothing, idc: \textit{startid}, idl: \textit{startblock}, rec: \varnothing\}) = O$, \\
 	then $eval_S(init_S(O.consts, O.code), O.ido) = o$.
+	\end{flushleft}
 \end{minipage}}
 \end{center}
-
+\medskip
 To actually prove this we need to strengthen the induction argument,
 accounting for arguments and types:
 
 \begin{center}
-\fbox{\begin{minipage}{0.9\textwidth}
-	When we have a well-typed program $e$ with 
-	$\varnothing, ((e_1^1 \dots) \dots (e_n^1 \dots)) \vdash e : \tau$ and 
-	$eval_\lambda(e) = o$ in $\lambda$V and (for any D $defs$ and any 
-	A $((d_1, (a_1^1 \dots)), \dots, (d_n, (a_n^1 \dots)))$ so that )
-	$translate(\{expr: e, defs: \varnothing, args: \varnothing, idc: \textit{startid}, idl: \textit{startblock}, rec: \varnothing\}) = O$,
-	then $eval_S(init_S(O.consts, O.code), O.ido) = o$.
+\fbox{\begin{minipage}{1\textwidth}
+	When we have a well-typed program $e$ with \\
+	$\varnothing, ((e_1^1 \dots) \dots (e_n^1 \dots)) \vdash e : \tau$ and  \\
+	$eval_\lambda(((e\: e_n^1 \dots) \dots)e_1^1 \dots) = o$ in $\lambda$V and  \\
+	$translate(\{expr: e, args: ((e_1^1 \dots) \dots (e_n^1 \dots)), idc: \textit{startid}, idl: \textit{startblock}, rec: \varnothing\}) = O$, \\
+	\textbf{then} \\
+	$O.type = \tau$, \\
+	if $O.ido \neq 0$, it has type $idtype(\tau)$; \\
+	and $eval_S(init_S(O.consts, O.code), O.ido) = o$.
 \end{minipage}}
 \end{center}
+\medskip
 
-We proof this by induction over the well-typedness, i.e. the type
+We did not formally define the type system for SPIR-V but it should
+be obvious from its text specification. \\
+We prove this theorem by induction over the well-typedness, i.e. the type
 derivation tree of expression $e$. We can start with the simple
 cases, even without additional Lemmas.
 
@@ -970,69 +1028,252 @@ each translation rule.
 \subsection{Correctness: list}
 
 % TODO: we don't actually need the operational semantics here?!
-When $e$ is a list of form $(e_0\: e_1 \dots e_n)$ and $e_0$ can be reduced
-to $e_0'$, the operational semantics specify that $e$ can be reduced to
-$(e_0' e_1 \dots e_n)$. Furthermore, given our typing rule "t-app",
-we can inductively assume the correctness theorem for $e_0$ with arguments
-$(e_1 \dots e_n)$. Here, we once again have to strengthen our induction
-argument to argue about arguments: When an expression $e$ is only
-well-typed under arguments $((e_1^1 \dots e_1^{n_1}) \dots (e_m^1 \dots e_m^{n_m}))$,
-then the evaluations of a translation with any arguments 
-$((d_1, (g_1^1 \dots g_1^{n_1})) \dots (d_m, (g_m^1 \dots g_m^{n_m})))$
-so that (for all i = $1..m$; for all k in $1..n_i$) $g_i^k$ with all identifier
-mappings from $d_i$ substituted is the same as $e_i^k$ must evaluate
-to the same as $((\dots(e\: e_m^1 \dots e_m^{n_m}) \dots) e_1^1 \dots e_1^{n_1})$.
-
-Given the translation rule for list and our induction hypothesis
-given by the type derivation, we know that the correctness theorem
-holds for $e_0$ with arguments $e_1 \dots e_n$, meaning its translation
-evaluates to the same as $e_0$ with those arguments.
+% When $e$ is a list of form $(e_0\: e_1 \dots e_n)$ and $e_0$ can be reduced
+% to $e_0'$, the operational semantics specify that $e$ can be reduced to
+% $(e_0' e_1 \dots e_n)$. Furthermore, given our typing rule "t-app",
+% we can inductively assume the correctness theorem for $e_0$ with arguments
+% $(e_1 \dots e_n)$. Here, we once again have to strengthen our induction
+% argument to argue about arguments: When an expression $e$ is only
+% well-typed under arguments $((e_1^1 \dots e_1^{n_1}) \dots (e_m^1 \dots e_m^{n_m}))$,
+% then the evaluations of a translation with any arguments 
+% $((d_1, (g_1^1 \dots g_1^{n_1})) \dots (d_m, (g_m^1 \dots g_m^{n_m})))$
+% so that (for all i = $1..m$; for all k in $1..n_i$) $g_i^k$ with all identifier
+% mappings from $d_i$ substituted is the same as $e_i^k$ must evaluate
+% to the same as $((\dots(e\: e_m^1 \dots e_m^{n_m}) \dots) e_1^1 \dots e_1^{n_1})$.
+% 
+% Given the translation rule for list and our induction hypothesis
+% given by the type derivation, we know that the correctness theorem
+% holds for $e_0$ with arguments $e_1 \dots e_n$, meaning its translation
+% evaluates to the same as $e_0$ with those arguments.
 % TODO: not a clear proof
 % TODO: what about value replacements except the first?
 % need to re-add that to rules
 
-\subsection{Correctness: let}
+Premises:
+\begin{itemize}
+	\item $e$ = $(e_0\: e_1 \dots e_n)$, well typed under arguments $A_r$
+	\item Per induction hypothesis (see typing rule \textit{t-app}), we
+		know that our strengthened theorem holds for $e_0$ with arguments
+		$(A_r, (e_1 \dots e_n))$.
+\end{itemize}
 
-Now $e$ is of form $(let\: (\dots(id_i\: e_i)\dots)\: e_b)$. 
-Per induction hypothesis and type rule we can assume our correctness argument
-for $e$ with substituted identifiers. To show that this substitution
-is the same as adding the definitions to our $I.defs$ mapping that
-we translate $e_b$ with (i.e. what our translation does), we define a Lemma:
-
-\medskip
-\textbf{Lemma subst-def}: The translation of $(e[r(e_1) / id_1]\dots[r(e_n) / id_n])$
-(we write $r(e_i)$ to denote the expression $e_i$ with all identifiers
-known to the current context --- the $defs$ of the translation --- replaced
-by their definitions) with definitions $defs$ evaluates to
-the same value as the translation of $e$ with
-definitions $ioa(defs, (id_i \mapsto (e_i, defs)) \dots)$. This Lemma
-% should be obvious, given that the whole purpose of $defs$ in our
-% translation is to perform substituion the same way we define it formally
-% (assuming that identifiers never shadow, i.e. giving each scope
-% its own names). It could be formally proven via induction over $e$.
-is only needed because we chose to model translation closely
-to how it can be implemented instead of relying on ``magical''
-context sensitive substitution. It should be possible to prove using
-induction over $e$, the only interesting rule being the
-identifiers for which the equality should be obvious, given that
-we just substitute/replace at different times.
-\medskip
-
-So per induction hypothesis we know that $eval_\lambda(e[e_i / id_i]\dots)$
-is the same as the evaluation of the translation in SPIR-V (technically
-we have to apply the current arguments from our strengthened induction
-argument to both). But our Lemma gives us that the translation of
-$e[e_i / id_i]\dots$ evaluates to the same value as $e$ translated with
-$id_i \mapsto e_i\dots$ definitions, which is exactly how
-we defined the \textit{let} translation. Furthermore, our operational
-semantics give us that $(let\: (\dots(id_i\: e_i)\dots)\: e_b)$ can
-be reduced to $e_b[e_i / id_i]\dots$, i.e. they both evaluate to
-the same value.
+This translation is basically just a utility step, moving arguments
+from the list into our translation argument stack (i.e. we translate
+$e_0$ with new argument stack $(A_r, (e_1 \dots e_n))$). \\
+The proof for the correctness of the translation is immediately given transitively
+by our induction hypothesis, since $(e_0\: e_1 \dots e_n)$ with arguments 
+$A_r$ has the same type as $e_0$ with arguments $(A_r, (e_1 \dots e_n))$
+and furthermore $e$ with applied argument stack $A_r$ (as seen in the
+premise of our strengthened theorem) is syntactically
+exactly the same as $e_0$ with unwrapped argument stack $(A_r, (e_1 \dots e_n))$,
+meaning they both obviously evaluate to the same observation.
 
 \subsection{Correctness: func}
 
+Premises:
+\begin{itemize}
+	\item $e$ = $(func\: (id_1 \dots id_n)\: e_b)$, well typed
+		under arguments $(A_r, (e_1 \dots e_n))$
+	\item Per induction hypothesis (see typing rule \textit{t-app}), we
+		know that our strengthened theorem holds for $e_b[e_1 / id_1]\dots[e_n / id_n]$ with arguments
+		$(A_r)$.
+\end{itemize}
+
+Our translation is defined as 
+\textit{O = translate(\{expr: $e[e_1 / id_1]\dots[e_n / id_n]$, args: $A_r$,
+idc: I.idc, idl: I.idl, rec: I.rec\})}. Since per typing rules,
+$e$ and $e[e_1 / id_1]\dots[e_n / id_n]$ have the same type and
+per operational semantics, $e$ can be reduced to
+$e[e_1 / id_1]\dots[e_n / id_n]$ i.e. both evaluate to the same value,
+we can just directly use our induction hypothesis to prove that
+this translation step is correct.
+
+\subsection{Correctness: let}
+
+Premises:
+\begin{itemize}
+	\item $e$ = $(let\: (\dots(id_i\: e_i)\dots)\: e_b)$, well typed
+		under arguments $A$
+	\item Per induction hypothesis our strengthened theoerem
+		holds for $e_b[e_i / id_i]\dots$, with the same arguments $A$
+\end{itemize}
+
+Our translation once again allows us to directly use the induction
+hypothesis to prove correctness, since we simply translate it to
+the translation of $e_b[e_i / id_i]\dots$ with the same argument.
+The operational semantics give us that $e$ can be reduced to
+$e_b[e_i / id_i]\dots$ i.e. both evaluate to the same value.
+The typeing rules guarantee us that both have the same type.
+
+% Now $e$ is of form $(let\: (\dots(id_i\: e_i)\dots)\: e_b)$. 
+% Per induction hypothesis and type rule we can assume our correctness argument
+% for $e$ with substituted identifiers. To show that this substitution
+% is the same as adding the definitions to our $I.defs$ mapping that
+% we translate $e_b$ with (i.e. what our translation does), we define a Lemma:
+% 
+% So per induction hypothesis we know that $eval_\lambda(e[e_i / id_i]\dots)$
+% is the same as the evaluation of the translation in SPIR-V (technically
+% we have to apply the current arguments from our strengthened induction
+% argument to both). But our Lemma gives us that the translation of
+% $e[e_i / id_i]\dots$ evaluates to the same value as $e$ translated with
+% $id_i \mapsto e_i\dots$ definitions, which is exactly how
+% we defined the \textit{let} translation. Furthermore, our operational
+% semantics give us that $(let\: (\dots(id_i\: e_i)\dots)\: e_b)$ can
+% be reduced to $e_b[e_i / id_i]\dots$, i.e. they both evaluate to
+% the same value.
+
+\subsection{Correctness: if}
+
+Our premises:
+\begin{itemize}
+	\item $e$ = (if $e_c$ $e_t$ $e_f$), well typed under arguments
+		$((e_1^1\dots)\dots(e_n^1\dots))$.
+	\item Per induction hypothesis we can assume the correctness
+		theorem for $e_c$, $e_t$ and $e_f$
+	\item There are two possible cases for the reduction of $e$:
+		if $e_c$ evaluates to true, $e$ evaluates to whatever
+		$e_t$ evaluates to otherwise whatever $e_f$ evaluates to
+		(given the arguments)
+\end{itemize}
+
+We step through the code generated by the translation of $e$ using
+our SPIR-V operational semantics: \\
+First, $O_c$.code is executed, per induction hypothesis
+this loads the observation of $eval_\lambda(e_c)$ into the memory
+at id $O_c$.ido. Based on our typing rules and the (strengthened) induction hypothesis
+applied to $e_c$ we know that $O_c$.ido must be of type bool and the
+following \textit{OpBranchCondition} can therefore be reduced.
+\textit{OpSelectionMerge} has no effect, and can effectively be ignored
+in our reduction, as previously described.
+If $O_c$.ido was true, we will execute $O_t$.code, otherwise
+$O_f$.code. Per induction hypothesis, both are guaranteed to load
+the observation $eval_\lambda(e_t)$ (or $eval_\lambda(e_f)$, respectively)
+into $O_t$.ido (or $O_f$.ido, respectively), assuming that the types of the
+branch expressions are not \textit{PureRec} (we get to that case below).
+After that, control always branches to the block \textit{I.idc + 2}.
+All that is done there is to select the computed value via an \textit{OpPhi}
+instruction. This value is the return value of the translation. \\
+
+If one of the branch expressions is of type PureRec, that means per
+typing rules that it is (potentially nested in some called \textit{func}
+or \textit{let} expressions) an expression \textit{(rec ...)}
+and can therefore not be reduced (we have no reduction rule for \textit{rec}).
+So if this branch is executed, we don't have to fulfill anything
+for our output (the premises of the correctness theorem are not fulfilled).
+On the other hand, this means (per induction hypothesis)
+that its translation will return O.type \textit{PureRec} and can return
+no output id, so we must not use its \textit{O.ido} or \textit{typeid(O.type)}.
+It furthermore will not follow linear flow, i.e. end the current code block,
+so the next instruction afterwards must be \textit{OpLabel}, starting
+a new block, for our SPIR-V code vector to be well defined. \\
+
+The returned value $O.ido$ is either $0$ (in the case
+when both branches are of type \textit{PureRec}) or of type \textit{typeid(O.type)}.
+When either of the branches is not of type \textit{PureRec}, a new
+ID will be returned as output, defined by the \textit{OpPhi} instruction
+in the last block. This instruction is of type \textit{typeid(O.type)}.
+Furthermore, it is well-defined since all passed parameters are
+of the same type (remember that $typeid(Rec \tau) = typeid(\tau)$),
+that is guaranteed by our typing rules and the induction hypothesis
+applied to the (non-\textit{PureRec}) branch expressions.
+
 \subsection{Correctness: rec-func and rec}
 
+This is by far the most complicated proof. We have to prove \textit{rec-func}
+and \textit{rec} together because they depend on each other and because
+\textit{rec} in itself cannot be reduced, it will always be substituted
+instead by the \textit{rec-func} expression it is contained in.
 
+Our premises:
+\begin{itemize}
+	\item $e$ = (rec-func ($id_1$ \dots) $e_b$)
+	\item The arguments for the well-typedness of $e$ are $((e_1 \dots e_n))$.
+	\item $e$ reduces to 
+		$e_b[e_1 / id_1]\dots[e_n / id_n][(\text{rec-func}\:(id_1 \dots id_n)\:e) / rec]$
+	\item Per induction hypothesis we know that our correctness theorem
+		holds for \\
+		$e_b[e_1 / id_1]\dots[e_n / id_n]$, translated with no arguments.
+	\item Per induction hypothesis we also know that our correctness theorem
+		holds for all the arguments $e_i$.
+\end{itemize}
+
+We reduce the code generated by the translation of $e$ according
+to the SPIR-V semantics we defined (writing a derivation
+tree for this would require a lot of space): \\
+Since we know the correctness theorem holds for the function arguments, 
+we know that $O_i.code$ in the $I.idl$ block indeed produces the same observations produced by
+$eval_\lambda(e_i)$. There is a reduction rule giving us in
+addition basically that $(\dots e_i \dots)$ is the same as
+$(\dots o \dots)$, given that $eval_\lambda(e_i) = o$.
+When we get to \textit{OpPhi} in block \textit{hb},
+$O_i$.ido will be selected since we jumped to the block from \textit{I.idl}.
+We ignore the OpLoopMerge instruction and jump to \textit{lb},
+where $O_b$ gets executed. The only way $O_b$ won't reach
+the \textit{OpBranch} ending the block is if execution gets to the
+translation of \textit{rec} (no other translations will ever branch out of
+linear flow) associated with the current \textit{rec-func} frame.
+Per opertional semantics, \textit{rec} in that case will get substituted 
+by the original \textit{rec-func} expression. \\
+Our translation of \textit{rec} will
+generate the code for all its arguments (here we can use the
+induction hypothesis for \textit{rec} to argue that the generated translations
+produce the same observations) and branch to \textit{cb}. In \textit{cb},
+those arguments will be selected via \textit{OpPhi}, and control
+will branch to \textit{hb} again, where those same arguments
+(transitively through the previous \textit{OpPhi}) function will
+be selected for the arguments used by $O_b.code$, where control
+branches subsequently. \\
+This means, given that our correctness theorem holds for
+$e_b[e_1 / id_1]\dots[e_n / id_n]$ (which we know per induction
+hypothesis for \textit{rec-func}), we know that once control reaches
+the \textit{OpBranch mb} instruction, the observation stored in
+$O_b$.ido (which is what is returned in $O$.ido) should indeed
+hold the observation $e$ can be reduced to. \\
+The well-typedness of our translation (as required by our strenghtened
+induction argument) is similarly guaranteed by the our induction
+hypothesis, i.e.\ the well-typedness of the function body and its
+arguments.
+
+This argumentation isn't yet enough for a formal proof but with
+enough time (and maybe some needed re-formalization) it should
+be possible to transform this reasoning into a formal proof,
+given that most of our explanation is just applying the SPIR-V operational
+semantics we defined.
+
+\section{Conclusion}
+
+We presented a translation for a language with functional elements
+such as (tail) recursion and higher-order functions (with restrictions)
+to SPIR-V, a language without dynamic memory allocation, recursion,
+a stack frame or dynamic dispatch.
+
+Initially, we modeled translation without using our ``magical'' 
+context-sensitive substitution. Instead, we used an additional
+translation input parameter holding all definitions and passing
+the environment for each argument tuple. While that was the last step to basically
+make translation just a one-to-one formal model of our code, it made
+the formalization much more complicated, requiring multiple helper functions,
+an additional strenghtening of our correctness induction hypothesis
+and in the end everything just boiled down again to a Lemma saying that
+translation of an expression with mappings given in the ``definitions''
+argument is the same as just substituting them. \\
+We still believe though that it would be worth to verify this
+Lemma (i.e. verify that substitution is indeed done correctly by our code)
+since this task was not trivial while writing the compiler.
+
+Further work includes extending this formal model from the subset
+to a full-blown shader language with inputs, multiple outputs as
+well as buffer and image read/write (modeled as inputs or observations,
+respectively). We would also like to explore how far other functional
+features such as sum types and pattern matching can be translated
+to SPIR-V. To actually make this compiler presented here usable,
+we would have to explore in how far the existing optimization tools
+for SPIR-V binaries are able to minimize the code bloat and performance
+problems introduced by our translation.
+The \textit{spirv-opt} program delivered promising results in first experiments.
+It would be interesting to see if there are optimizations it cannot perform
+that could instead be done in our compiler. On the other hand, using additional
+(unverified) optimization passes obviously might mess with the outlined correctness
+of our compiler.
 
 \end{document}
